tests/invalid/parameter_pack_missing_matching_generic_pack.wio
fn Bad<T>(value: i32, args: T...) -> i32 {
    return value;
}
